comment added on code

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,3 +1,4 @@
+<%# this page for installment pay and display structure %>
 <div class="container my-4">
   <div class="alert alert-info">
     <strong>Note:</strong> If the student pays more than the installment amount, the excess amount should be deducted from the next installment(s).</br>
