--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,4 +1,4 @@
-<!-- app/views/students/new.html.erb -->
+<%# this page use for student record create  %>
 <div class="container mt-5">
   <div class="card">
     <div class="card-header">
